<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/open_accessibility_settings" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/usage2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/usage3" />

    <EditText
        android:id="@+id/editPackageName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_package"
        android:text="@string/example_package" />

    <EditText
        android:id="@+id/editClassName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_class"
        android:text="@string/example_class" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onNewIntent"
        android:text="@string/launch" />

</LinearLayout>
